--- a/Filter.ipynb
+++ b/Filter.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Filter\n",
-    "* [**Single Filter**](Filter.ipynb#How-to-filter-the-rows-using-pandas-python)\n",
-    "* [**Multiple Filter**](Filter.ipynb#Multiple-Filter)\n",
+    "* **Single Filter**\n",
+    "* **Multiple Filter**\n",
     "***"
    ]
   },
